--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "rxjs": "6.5.3",
     "subsink": "^1.0.0",
     "ts-enum-util": "^4.0.1",
+    "tslib": "^1.10.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
