--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,7 @@ jobs:
 
       - run: npm run standardize:ci
       - run: npm run build:prod
-      - run: npm test -- --watch=false
-      - run: npm run test:coverage
+      - run: npm test -- --watch=false --code-coverage
       - run: npm run e2e
 
       - store_test_results:
