--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@types/node": "^12.12.7",
     "angular-unit-test-helper": "^1.4.1",
     "codelyzer": "^5.2.0",
+    "cypress": "3.6.1",
     "cross-conf-env": "^1.1.2",
     "dev-norms": "^1.7.0",
     "fake-jwt-sign": "^1.1.1",
@@ -126,7 +127,8 @@
     "protractor": "^5.4.2",
     "ts-node": "~8.5.0",
     "tslint": "^5.20.1",
-    "typescript": "^3.6.4"
+    "typescript": "^3.6.4",
+    "cypress": "3.6.1"
   },
   "importSort": {
     ".ts, .tsx": {
