--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "protractor": "^5.4.2",
     "ts-node": "~8.5.0",
     "tslint": "^5.20.1",
+    "tslint-etc": "^1.9.2",
     "typescript": "^3.6.4"
   },
   "importSort": {
