--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,7 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       - run: npm run standardize:ci
+      - run: npm run lint
       - run: npm run build:prod
       - run: npm test -- --watch=false --code-coverage
       - run: npm run e2e
