--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "ng build",
     "test": "ng test --browsers Chrome",
     "test:debug": "ng test --browsers Chrome --source-map",
-    "lint": "ng lint",
+    "lint": "tslint --config tslint.json --project . -e \"**/{test,polyfills}.ts\"",
+    "lint:fix": "tslint --config tslint.json --fix --project . -e \"**/{test,polyfills}.ts\"",
     "e2e": "ng e2e",
     "build:prod": "ng build --prod",
     "build:integration": "cross-conf-env docker build -f integration.Dockerfile . -t $npm_package_config_imageRepo:latest --build-arg CACHEBUST=$(date +%s)",
