--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      - run: npm run standardize:ci
+      - run: npm run style
       - run: npm run lint
       - run: npm run build:prod
       - run: npm test -- --watch=false --code-coverage
