--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "scripts": {
     "ng": "ng",
-    "standardize": "import-sort --write \"**/*.ts\" && prettier-tslint fix \"**/*.ts\" && js-beautify --editorconfig \"src/**/*.html\"",
-    "standardize:ci": "import-sort -l \"**/*.ts\" && prettier-tslint check \"**/*.ts\"",
+    "style:fix": "import-sort --write \"**/*.ts\" && prettier --write \"**/*.ts\"",
+    "style": "import-sort -l \"**/*.ts\" && prettier --check \"**/*.ts\"",
     "start": "ng serve --port 5000",
     "build": "ng build",
     "test": "ng test --browsers Chrome",
@@ -123,11 +123,12 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
-    "prettier-tslint": "^0.4.2",
     "protractor": "^5.4.2",
     "ts-node": "~8.5.0",
     "tslint": "^5.20.1",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-etc": "^1.9.2",
+    "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.6.4"
   },
   "importSort": {
