--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,11 +6,12 @@
   "editor.autoIndent": true,
   "editor.cursorBlinking": "solid",
   "editor.formatOnType": false,
-  "editor.formatOnPaste": true,
+  "editor.formatOnPaste": false,
   "editor.formatOnSave": true,
   "editor.minimap.enabled": false,
   "editor.codeActionsOnSave": {
-    "source.organizeImports": false
+    "source.organizeImports": false,
+    "source.fixAll.tslint": true,
   },
 
   "explorer.openEditors.visible": 0,
