--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "scripts": {
     "ng": "ng",
-    "style:fix": "import-sort --write \"**/*.ts\" && prettier --write \"**/*.ts\"",
-    "style": "import-sort -l \"**/*.ts\" && prettier --check \"**/*.ts\"",
+    "style:fix": "import-sort --write \"**/*.ts\" && prettier --write \"**/*.{*css,ts}\" && js-beautify \"src/**/*.html\"",
+    "style": "import-sort -l \"**/*.ts\" && prettier --check \"**/*.{*css,ts}\"",
     "start": "ng serve --port 5000",
     "build": "ng build",
     "test": "ng test --browsers Chrome",
@@ -102,8 +102,8 @@
     "@types/node": "^12.12.7",
     "angular-unit-test-helper": "^1.4.1",
     "codelyzer": "^5.2.0",
-    "cypress": "3.6.1",
     "cross-conf-env": "^1.1.2",
+    "cypress": "3.6.1",
     "dev-norms": "^1.7.0",
     "fake-jwt-sign": "^1.1.1",
     "http-server": "^0.11.1",
