--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,9 @@
       "request": "launch",
       "url": "http://localhost:5000/#",
       "webRoot": "${workspaceRoot}",
-      "runtimeArgs": ["--remote-debugging-port=9222"],
+      "runtimeArgs": [
+        "--remote-debugging-port=9222"
+      ],
       "sourceMaps": true,
       "preLaunchTask": "npm: start"
     },
@@ -27,7 +29,9 @@
       "request": "launch",
       "url": "http://localhost:9876/debug.html",
       "webRoot": "${workspaceRoot}",
-      "runtimeArgs": ["--remote-debugging-port=9222"],
+      "runtimeArgs": [
+        "--remote-debugging-port=9222"
+      ],
       "sourceMaps": true,
       "preLaunchTask": "npm: test"
     },
@@ -47,7 +51,9 @@
       "request": "launch",
       "program": "${workspaceRoot}/node_modules/protractor/bin/protractor",
       "protocol": "inspector",
-      "args": ["${workspaceRoot}/protractor.conf.js"]
+      "args": [
+        "${workspaceRoot}/protractor.conf.js"
+      ]
     }
   ]
 }
