--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "scripts": {
     "ng": "ng",
-    "style:fix": "import-sort --write \"**/*.ts\" && prettier --write \"**/*.{*css,ts}\" && js-beautify \"src/**/*.html\"",
-    "style": "import-sort -l \"**/*.ts\" && prettier --check \"**/*.{*css,ts}\"",
+    "style:fix": "import-sort --write \"**/{src,tests,e2e}/*.ts\" && prettier --write \"**/{src,tests,e2e}/*.{*css,ts}\" && js-beautify \"src/**/*.html\"",
+    "style": "import-sort -l \"**/{src,tests,e2e}/*.ts\" && prettier --check \"**/{src,tests,e2e}/*.{*css,ts}\"",
     "start": "ng serve --port 5000",
     "build": "ng build",
     "test": "ng test --browsers Chrome",
@@ -27,7 +27,7 @@
     "lint:fix": "tslint --config tslint.json --fix --project . -e \"**/{test,polyfills}.ts\"",
     "e2e": "ng e2e",
     "build:prod": "ng build --prod",
-    "build:integration": "cross-conf-env docker build -f integration.Dockerfile . -t $npm_package_config_imageRepo:latest --build-arg CACHEBUST=$(date +%s)",
+    "build:integration": "cross-conf-env docker image build -f integration.Dockerfile . -t $npm_package_config_imageRepo:latest --build-arg CACHEBUST=$(date +%s)",
     "premock:start": "npm run build:prod",
     "mock:standalone": "docker run -p 3000:3000 -t duluca/lemon-mart-swagger-server",
     "mock:start": "docker-compose up",
