--- a/package.json
+++ b/package.json
@@ -64,14 +64,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "9.0.0-rc.6",
-    "@angular/cdk": "9.0.0-rc.4",
+    "@angular/cdk": "9.0.0-rc.5",
     "@angular/common": "9.0.0-rc.6",
     "@angular/compiler": "9.0.0-rc.6",
     "@angular/core": "9.0.0-rc.6",
-    "@angular/fire": "^5.2.3",
+    "@angular/fire": "^5.3.0-rc.2",
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "9.0.0-rc.6",
-    "@angular/material": "9.0.0-rc.4",
+    "@angular/material": "9.0.0-rc.5",
     "@angular/platform-browser": "9.0.0-rc.6",
     "@angular/platform-browser-dynamic": "9.0.0-rc.6",
     "@angular/router": "9.0.0-rc.6",
@@ -80,11 +80,11 @@
     "@ngrx/entity": "^8.5.2",
     "@ngrx/store": "^8.5.2",
     "@ngrx/store-devtools": "^8.5.2",
-    "firebase": "^7.3.0",
+    "firebase": "^7.6.0",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "ngx-mask": "^8.1.6",
-    "rxjs": "6.5.3",
+    "rxjs": "^6.5.3",
     "subsink": "^1.0.0",
     "ts-enum-util": "^4.0.1",
     "tslib": "^1.10.0",
@@ -95,18 +95,18 @@
     "@angular/cli": "9.0.0-rc.6",
     "@angular/compiler-cli": "9.0.0-rc.6",
     "@angular/language-service": "9.0.0-rc.6",
-    "@types/jasmine": "~3.4.6",
+    "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "^12.12.7",
+    "@types/node": "^12.12.19",
     "angular-unit-test-helper": "^1.4.1",
     "codelyzer": "^5.2.0",
     "cross-conf-env": "^1.1.2",
-    "cypress": "3.6.1",
+    "cypress": "3.8.0",
     "dev-norms": "^1.7.0",
     "fake-jwt-sign": "^1.1.1",
-    "http-server": "^0.11.1",
+    "http-server": "^0.12.0",
     "import-sort": "^6.0.0",
     "import-sort-cli": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
@@ -118,7 +118,7 @@
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "~2.0.0",
-    "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-edge-launcher": "^0.4.2",
     "karma-htmlfile-reporter": "^0.3.8",
     "karma-jasmine": "^2.0.1",
@@ -126,10 +126,10 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "protractor": "^5.4.2",
-    "ts-node": "~8.5.0",
+    "ts-node": "~8.5.4",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-etc": "^1.9.2",
+    "tslint-etc": "^1.10.0",
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.6.4"
   },
