--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "scripts": {
     "ng": "ng",
-    "style:fix": "import-sort --write \"**/{src,tests,e2e}/*.ts\" && prettier --write \"**/{src,tests,e2e}/*.{*css,ts}\" && js-beautify \"src/**/*.html\"",
-    "style": "import-sort -l \"**/{src,tests,e2e}/*.ts\" && prettier --check \"**/{src,tests,e2e}/*.{*css,ts}\"",
+    "style:fix": "import-sort --write \"{src,tests,e2e}/**/*.ts\" && prettier --write \"{src,tests,e2e}/**/*.{*css,ts}\" && js-beautify \"src/**/*.html\"",
+    "style": "import-sort -l \"{src,tests,e2e}/**/*.ts\" && prettier --check \"{src,tests,e2e}/**/*.{*css,ts}\"",
     "start": "ng serve --port 5000",
     "build": "ng build",
     "test": "ng test --browsers Chrome",
