--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "lint:fix": "tslint --config tslint.json --fix --project . -e \"**/{test,polyfills}.ts\"",
     "e2e": "ng e2e",
     "build:prod": "ng build --prod",
-    "build:integration": "cross-conf-env docker image build -f integration.Dockerfile . -t $npm_package_config_imageRepo:latest --build-arg CACHEBUST=$(date +%s)",
+    "build:integration": "cross-conf-env docker image build -f integration.Dockerfile . -t $npm_package_config_imageRepo:latest",
     "premock:start": "npm run build:prod",
     "mock:standalone": "docker run -p 3000:3000 -t duluca/lemon-mart-swagger-server",
     "mock:start": "docker-compose up",
     "mock:stop": "docker-compose down",
     "test:prod": "ng test --browsers ChromiumNoSandbox --watch=false",
     "test:prod:e2e": "npm run e2e",
-    "cypress:run": "cypress run --record",
+    "cypress:run": "npx cypress run --record",
     "test:coverage": "ng test --browsers ChromiumNoSandbox --watch=false --code-coverage",
     "posttest:coverage": "http-server -c-1 -o -p 9875 ./coverage",
     "predocker:build": "npm run build:prod && npm run test:prod",
@@ -103,7 +103,6 @@
     "angular-unit-test-helper": "^1.4.1",
     "codelyzer": "^5.2.0",
     "cross-conf-env": "^1.1.2",
-    "cypress": "3.8.0",
     "dev-norms": "^1.7.0",
     "fake-jwt-sign": "^1.1.1",
     "http-server": "^0.12.0",
