--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "aws:login": "run-p -cs aws:login:win aws:login:mac",
     "aws:deploy": "cross-conf-env docker run --env-file ./.env duluca/ecs-deploy-fargate -c $npm_package_config_awsEcsCluster -n $npm_package_config_awsService -i $npm_package_config_imageRepo:latest -r $npm_package_config_awsRegion --timeout 1000",
     "aws:release": "run-s -cs aws:login docker:publish aws:deploy",
-    "aws:fargate-release": "run-s -cs aws:login docker:publish"
+    "aws:fargate-release": "run-s -cs aws:login docker:publish",
+    "init:env": "init-dev-env generate-dot-env example.env -f"
   },
   "private": true,
   "dependencies": {
@@ -110,6 +111,7 @@
     "import-sort-cli": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
+    "init-dev-env": "^1.0.0",
     "jasmine": "^3.5.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -125,6 +127,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "protractor": "^5.4.2",
+    "rimraf": "^3.0.0",
     "ts-node": "~8.5.4",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
