--- a/package.json
+++ b/package.json
@@ -60,49 +60,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.0.0-rc.14",
-    "@angular/cdk": "9.0.0-rc.5",
-    "@angular/common": "9.0.0-rc.14",
-    "@angular/compiler": "9.0.0-rc.14",
-    "@angular/core": "9.0.0-rc.14",
-    "@angular/fire": "^5.3.0-rc.2",
+    "@angular/animations": "9.0.0",
+    "@angular/cdk": "9.0.0",
+    "@angular/common": "9.0.0",
+    "@angular/compiler": "9.0.0",
+    "@angular/core": "9.0.0",
+    "@angular/fire": "^6.0.0-rc.1",
     "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "9.0.0-rc.14",
-    "@angular/material": "9.0.0-rc.5",
-    "@angular/platform-browser": "9.0.0-rc.14",
-    "@angular/platform-browser-dynamic": "9.0.0-rc.14",
-    "@angular/router": "9.0.0-rc.14",
-    "@ngrx/data": "^8.5.2",
-    "@ngrx/effects": "^8.5.2",
-    "@ngrx/entity": "^8.5.2",
-    "@ngrx/store": "^8.5.2",
-    "@ngrx/store-devtools": "^8.5.2",
-    "firebase": "^7.6.0",
+    "@angular/forms": "9.0.0",
+    "@angular/material": "9.0.0",
+    "@angular/platform-browser": "9.0.0",
+    "@angular/platform-browser-dynamic": "9.0.0",
+    "@angular/router": "9.0.0",
+    "@ngrx/data": "^9.0.0-beta.0",
+    "@ngrx/effects": "^9.0.0-beta.0",
+    "@ngrx/entity": "^9.0.0-beta.0",
+    "@ngrx/store": "^9.0.0-beta.0",
+    "@ngrx/store-devtools": "^9.0.0-beta.0",
+    "firebase": "^7.8.1-0",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
-    "ngx-mask": "^8.1.6",
-    "rxjs": "^6.5.3",
-    "subsink": "^1.0.0",
+    "ngx-mask": "^8.1.7",
+    "rxjs": "^7.0.0-alpha.1",
+    "subsink": "^1.0.1",
     "ts-enum-util": "^4.0.1",
     "tslib": "^1.10.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.0-rc.14",
-    "@angular/cli": "9.0.0-rc.14",
-    "@angular/compiler-cli": "9.0.0-rc.14",
-    "@angular/language-service": "9.0.0-rc.14",
-    "@types/jasmine": "~3.5.0",
+    "@angular/cli": "9.0.0",
+    "@angular/compiler-cli": "9.0.0",
+    "@angular/language-service": "9.0.0",
+    "@types/jasmine": "~3.5.3",
     "@types/jasminewd2": "~2.0.8",
-    "@types/jsonwebtoken": "^8.3.5",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "^12.12.19",
+    "@types/node": "^13.7.0",
     "angular-unit-test-helper": "^1.4.1",
-    "codelyzer": "^5.2.0",
+    "codelyzer": "^5.2.1",
     "cross-conf-env": "^1.1.2",
     "dev-norms": "^1.7.0",
     "fake-jwt-sign": "^1.1.1",
-    "http-server": "^0.12.0",
+    "http-server": "^0.12.1",
     "import-sort": "^6.0.0",
     "import-sort-cli": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
@@ -118,18 +118,18 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-edge-launcher": "^0.4.2",
     "karma-htmlfile-reporter": "^0.3.8",
-    "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-jasmine": "^3.1.0",
+    "karma-jasmine-html-reporter": "^1.5.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
-    "protractor": "^5.4.2",
-    "rimraf": "^3.0.0",
-    "ts-node": "~8.5.4",
+    "protractor": "^5.4.3",
+    "rimraf": "^3.0.1",
+    "ts-node": "~8.6.2",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-etc": "^1.10.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.6.4"
+    "tslint-plugin-prettier": "^2.1.0",
+    "typescript": "^3.8.0-dev.20200206"
   },
   "importSort": {
     ".ts, .tsx": {
