--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-etc": "^1.10.0",
     "tslint-plugin-prettier": "^2.1.0",
-    "typescript": "^3.8.0-dev.20200206"
+    "typescript": "^3.7.5"
   },
   "importSort": {
     ".ts, .tsx": {
