--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@angular/compiler": "9.0.0",
     "@angular/core": "9.0.0",
     "@angular/fire": "^6.0.0-rc.1",
-    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/flex-layout": "^9.0.0-beta.28",
     "@angular/forms": "9.0.0",
     "@angular/material": "9.0.0",
     "@angular/platform-browser": "9.0.0",
@@ -88,7 +88,7 @@
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.14",
+    "@angular-devkit/build-angular": "~0.900.0",
     "@angular/cli": "9.0.0",
     "@angular/compiler-cli": "9.0.0",
     "@angular/language-service": "9.0.0",
@@ -111,7 +111,7 @@
     "jasmine": "^3.5.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "js-beautify": "^1.10.2",
+    "js-beautify": "^1.10.3",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "~2.0.0",
@@ -125,7 +125,7 @@
     "protractor": "^5.4.3",
     "rimraf": "^3.0.1",
     "ts-node": "~8.6.2",
-    "tslint": "^5.20.1",
+    "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-etc": "^1.10.0",
     "tslint-plugin-prettier": "^2.1.0",
