update to launch json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,7 @@
       "request": "launch",
       "url": "http://localhost:5000/#",
       "webRoot": "${workspaceRoot}",
-      "runtimeArgs": [
-        "--remote-debugging-port=9222"
-      ],
+      "runtimeArgs": ["--remote-debugging-port=9222"],
       "sourceMaps": true,
       "preLaunchTask": "npm: start"
     },
@@ -17,7 +15,6 @@
       "name": "Debug npm start with Edge",
       "type": "edge",
       "request": "launch",
-      "version": "dev",
       "url": "http://localhost:5000/#",
       "webRoot": "${workspaceRoot}",
       "sourceMaps": true,
@@ -29,9 +26,7 @@
       "request": "launch",
       "url": "http://localhost:9876/debug.html",
       "webRoot": "${workspaceRoot}",
-      "runtimeArgs": [
-        "--remote-debugging-port=9222"
-      ],
+      "runtimeArgs": ["--remote-debugging-port=9222"],
       "sourceMaps": true,
       "preLaunchTask": "npm: test"
     },
@@ -39,7 +34,6 @@
       "name": "Debug npm test with Edge",
       "type": "edge",
       "request": "launch",
-      "version": "dev",
       "url": "http://localhost:9876/debug.html",
       "webRoot": "${workspaceRoot}",
       "sourceMaps": true,
@@ -51,9 +45,7 @@
       "request": "launch",
       "program": "${workspaceRoot}/node_modules/protractor/bin/protractor",
       "protocol": "inspector",
-      "args": [
-        "${workspaceRoot}/protractor.conf.js"
-      ]
+      "args": ["${workspaceRoot}/protractor.conf.js"]
     }
   ]
 }
