rolling back betas

--- a/package.json
+++ b/package.json
@@ -72,16 +72,16 @@
     "@angular/platform-browser": "9.0.0",
     "@angular/platform-browser-dynamic": "9.0.0",
     "@angular/router": "9.0.0",
-    "@ngrx/data": "^9.0.0-beta.0",
-    "@ngrx/effects": "^9.0.0-beta.0",
-    "@ngrx/entity": "^9.0.0-beta.0",
-    "@ngrx/store": "^9.0.0-beta.0",
-    "@ngrx/store-devtools": "^9.0.0-beta.0",
-    "firebase": "^7.8.1-0",
+    "@ngrx/data": "^8.6.0",
+    "@ngrx/effects": "^8.6.0",
+    "@ngrx/entity": "^8.6.0",
+    "@ngrx/store": "^8.6.0",
+    "@ngrx/store-devtools": "^8.6.0",
+    "firebase": "^7.8.0",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "ngx-mask": "^8.1.7",
-    "rxjs": "^7.0.0-alpha.1",
+    "rxjs": "^6.5.3",
     "subsink": "^1.0.1",
     "ts-enum-util": "^4.0.1",
     "tslib": "^1.10.0",
