--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "angular-unit-test-helper": "^1.4.1",
     "codelyzer": "^5.2.1",
     "cross-conf-env": "^1.1.2",
+    "cypress": "^4.0.0",
     "dev-norms": "^1.7.0",
     "fake-jwt-sign": "^1.1.1",
     "http-server": "^0.12.1",
