--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
   },
   "scripts": {
     "ng": "ng",
-    "style:fix": "import-sort --write \"{src,tests,e2e}/**/*.ts\" && prettier --write \"{src,tests,e2e}/**/*.{*css,ts}\" && js-beautify \"src/**/*.html\"",
-    "style": "import-sort -l \"{src,tests,e2e}/**/*.ts\" && prettier --check \"{src,tests,e2e}/**/*.{*css,ts}\"",
+    "style:fix": "import-sort --write \"**/{src,tests,e2e}/**/*.ts\" && prettier --write \"**/{src,tests,e2e}/**/*.{*css,ts}\" && js-beautify \"**/src/**/*.html\"",
+    "style": "import-sort -l \"**/{src,tests,e2e}/**/*.ts\" && prettier --check \"**/{src,tests,e2e}/**/*.{*css,ts}\"",
     "start": "ng serve --port 5000",
     "build": "ng build",
-    "test": "ng test --browsers Chrome",
-    "test:debug": "ng test --browsers Chrome --source-map",
+    "test": "ng test lemon-mart --browsers Chrome",
+    "test:debug": "npm test -- --browsers Chrome --source-map",
     "lint": "tslint --config tslint.json --project . -e \"**/{test,polyfills}.ts\"",
     "lint:fix": "tslint --config tslint.json --fix --project . -e \"**/{test,polyfills}.ts\"",
-    "e2e": "ng e2e",
+    "e2e": "ng e2e lemon-mart",
     "build:prod": "ng build --prod",
     "build:integration": "cross-conf-env docker image build -f integration.Dockerfile . -t $npm_package_config_imageRepo:latest",
-    "test:prod": "ng test --browsers ChromiumNoSandbox --watch=false",
+    "test:prod": "npm test -- --browsers ChromiumNoSandbox --watch=false",
     "test:prod:e2e": "npm run e2e",
     "cypress:run": "npx cypress run --record",
-    "test:coverage": "ng test --browsers ChromiumNoSandbox --watch=false --code-coverage",
+    "test:coverage": "npm test -- --browsers ChromiumNoSandbox --watch=false --code-coverage",
     "posttest:coverage": "http-server -c-1 -o -p 9875 ./coverage",
     "predocker:build": "npm run build:prod && npm run test:prod",
     "docker:build": "cross-conf-env docker image build . -t $npm_package_config_imageRepo:$npm_package_version",
