--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,10 +75,40 @@ jobs:
       - attach_workspace:
           at: /tmp/workspace
       - run: npx now --token $NOW_TOKEN --platform-version 2 --prod --name lemon-mart /tmp/workspace/dist/lemon-mart
+  verifyProjects:
+    # this job is only here to verify sample code from the book, remove it in your own projects
+    docker:
+      - image: circleci/node:lts-browsers
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
+
+      - run: npm ci
+
+      # force update the webdriver, so it runs with latest version of Chrome
+      - run: cd ./node_modules/protractor && npm i webdriver-manager@latest
+
+      # because we use "npm ci" to install NPM dependencies
+      # we cache "~/.npm" folder
+      - save_cache:
+          paths:
+            - ~/.npm
+          key: v1-dependencies-{{ checksum "package.json" }}
+
+      - run:
+          name: Verify sample codes for the book chapters
+          command: node ./bin/verifyProjects.js
+
 workflows:
   version: 2
   build-test-and-approval-deploy:
     jobs:
+      - verifyProjects # this job is only here to verify sample code from the book, remove it in your own projects
       - build
       - hold:
           type: approval
