--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,60 @@
 version: 2.1
 orbs:
   coveralls: coveralls/coveralls@1.0.4
-  # Cypress Orb, see
-  # https://github.com/cypress-io/circleci-orb
   cypress: cypress-io/cypress@1
-jobs:
-  build:
-    docker:
-      - image: circleci/node:lts-browsers
-    working_directory: ~/repo
+commands:
+  install:
+    description: 'Install project dependencies'
+    parameters:
+      warm-cache:
+        type: boolean
+        default: false
     steps:
       - checkout
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - run: npm ci
-
-      # force update the webdriver, so it runs with latest version of Chrome
-      - run: cd ./node_modules/protractor && npm i webdriver-manager@latest
-
-      # because we use "npm ci" to install NPM dependencies
-      # we cache "~/.npm" folder
-      # because Cypress is a dev dependency
-      # we should also cache "~/.cache/Cypress" folder
-      - save_cache:
-          paths:
-            - ~/.npm
-            - ~/.cache/Cypress
-          key: v1-dependencies-{{ checksum "package.json" }}
-
+            - node_modules-{{ checksum "package-lock.json" }}
+      - when:
+          condition: << parameters.warm-cache >>
+          steps:
+            - run: npm install
+            # Pre-build Angular modules
+            - run: npx ngcc --properties es2015 --async false # async false is temp CI build fix
+            # force update the webdriver, so it runs with latest version of Chrome
+            - run: cd ./node_modules/protractor && npm i webdriver-manager@latest
+            - save_cache:
+                key: node_modules-{{ checksum "package-lock.json" }}
+                paths:
+                  - node_modules
+                  - ~/.cache/Cypress
+  lint:
+    description: 'Check for code style and linting errors'
+    steps:
       - run: npm run style
       - run: npm run lint
-      - run: npm run build:prod
-      - run: npm test -- --watch=false --code-coverage
-      - run: npm run e2e
+  build_and_test:
+    description: 'Build command that accepts Angular project name as parameter'
+    parameters:
+      project:
+        type: string
+        default: 'lemon-mart'
+      run-tests:
+        type: boolean
+        default: true
+    steps:
+      - run: npx ng build --prod --project << parameters.project >>
+      - when:
+          condition: << parameters.run-tests >>
+          steps:
+            - run: npx ng test --code-coverage --watch=false --project << parameters.project >>
+            - run: npx ng e2e << parameters.project >>
+  store:
+    description: 'Stores build_and_test artifacts'
+    parameters:
+      project:
+        type: string
+        default: 'lemon-mart'
+    steps:
       - run:
           name: Run Cypress tests
           command: 'npx cypress run --record'
@@ -53,7 +71,7 @@ jobs:
 
       - run:
           name: Tar & Gzip compiled app
-          command: tar zcf dist.tar.gz dist/lemon-mart
+          command: tar zcf dist.tar.gz dist/<< parameters.project >>
       - store_artifacts:
           path: dist.tar.gz
 
@@ -62,58 +80,79 @@ jobs:
           command: |
             set -exu
             mkdir -p /tmp/workspace/dist
-            mv dist/lemon-mart /tmp/workspace/dist/
+            mv dist/<< parameters.project >> /tmp/workspace/dist/
       - persist_to_workspace:
           root: /tmp/workspace
           paths:
-            - dist/lemon-mart
+            - dist/<< parameters.project >>
+  deploy_now:
+    description: 'Deploys project to Zeit Now --> https://now.sh'
+    parameters:
+      project:
+        type: string
+        default: 'lemon-mart'
+    steps:
+      - attach_workspace:
+          at: /tmp/workspace
+      - run: npx now --token $NOW_TOKEN --platform-version 2 --prod /tmp/workspace/dist/<< parameters.project >> --confirm
+jobs:
+  initialize:
+    docker:
+      - image: circleci/node:lts-browsers
+    working_directory: ~/repo
+    steps:
+      - install:
+          warm-cache: true
+  default:
+    docker:
+      - image: circleci/node:lts-browsers
+    working_directory: ~/repo
+    steps:
+      - install
+      - lint
+      - build_and_test
+      - store
   deploy:
     docker:
       - image: circleci/node:lts
     working_directory: ~/repo
     steps:
-      - attach_workspace:
-          at: /tmp/workspace
-      - run: npx now --token $NOW_TOKEN --platform-version 2 --prod /tmp/workspace/dist/lemon-mart --confirm
-  verifyProjects:
-    # this job is only here to verify sample code from the book, remove it in your own projects
+      - deploy_now
+
+  ch7: # this job is only here to verify sample code from the book, remove it in your own projects
     docker:
       - image: circleci/node:lts-browsers
     working_directory: ~/repo
     steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-      - run: npm ci
-
-      # force update the webdriver, so it runs with latest version of Chrome
-      - run: cd ./node_modules/protractor && npm i webdriver-manager@latest
-
-      # because we use "npm ci" to install NPM dependencies
-      # we cache "~/.npm" folder
-      - save_cache:
-          paths:
-            - ~/.npm
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-      - run:
-          name: Verify sample codes for the book chapters
-          command: node ./bin/verifyProjects.js
-
+      - install
+      - build_and_test:
+          project: 'ch7'
+  ch8: # this job is only here to verify sample code from the book, remove it in your own projects
+    docker:
+      - image: circleci/node:lts-browsers
+    working_directory: ~/repo
+    steps:
+      - install
+      - build_and_test:
+          project: 'ch8'
 workflows:
   version: 2
   build-test-and-approval-deploy:
     jobs:
-      - verifyProjects # this job is only here to verify sample code from the book, remove it in your own projects
-      - build
+      - initialize
+      - default:
+          requires:
+            - initialize
+      - ch7: # this job is only here to verify sample code from the book, remove it in your own projects
+          requires:
+            - initialize
+      - ch8: # this job is only here to verify sample code from the book, remove it in your own projects
+          requires:
+            - initialize
       - hold:
           type: approval
           requires:
-            - build
+            - default
           filters:
             branches:
               only: master
