--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,7 +40,8 @@
     "activityBarBadge.foreground": "#15202b",
     "statusBar.background": "#2e7d32",
     "statusBarItem.hoverBackground": "#3ca241",
-    "statusBar.foreground": "#e7e7e7"
+    "statusBar.foreground": "#e7e7e7",
+    "statusBar.border": "#2e7d32"
   },
   "peacock.color": "#2e7d32",
   "gitlens.menus": {
