update to docker scripts

--- a/package.json
+++ b/package.json
@@ -33,23 +33,19 @@
     "cypress:run": "npx cypress run --record",
     "test:coverage": "npm test -- --browsers ChromiumNoSandbox --watch=false --code-coverage",
     "posttest:coverage": "http-server -c-1 -o -p 9875 ./coverage",
-    "predocker:build": "npm run build:prod && npm run test:prod",
+    "predocker:build": "npm run build",
     "docker:build": "cross-conf-env docker image build . -t $npm_package_config_imageRepo:$npm_package_version",
     "postdocker:build": "npm run docker:tag",
     "docker:tag": " cross-conf-env docker image tag $npm_package_config_imageRepo:$npm_package_version $npm_package_config_imageRepo:latest",
-    "docker:run": "run-s -c docker:clean docker:runHelper",
-    "docker:runHelper": "cross-conf-env docker run -e NODE_ENV=local --name $npm_package_config_imageName -d -p $npm_package_config_imagePort:$npm_package_config_internalContainerPort $npm_package_config_imageRepo",
-    "predocker:publish": "echo Attention! Ensure `docker login` is correct.",
+    "docker:run": "run-s -c docker:stop docker:runHelper",
+    "docker:runHelper": "cross-conf-env docker run -e NODE_ENV=local --rm --name $npm_package_config_imageName -d -p $npm_package_config_imagePort:$npm_package_config_internalContainerPort $npm_package_config_imageRepo",
+    "predocker:publish": "echo Attention! Ensure `docker login` information is correct.",
     "docker:publish": "cross-conf-env docker image push $npm_package_config_imageRepo:$npm_package_version",
     "postdocker:publish": "cross-conf-env docker image push $npm_package_config_imageRepo:latest",
     "docker:clean": "cross-conf-env docker rm -f $npm_package_config_imageName",
-    "predocker:taillogs": "echo Web Server Logs:",
-    "docker:taillogs": "cross-conf-env docker logs -f $npm_package_config_imageName",
-    "docker:open:win": "echo Trying to launch on Windows && timeout 2 && start http://localhost:%npm_package_config_imagePort%",
-    "docker:open:mac": "echo Trying to launch on MacOS && sleep 2 && URL=http://localhost:$npm_package_config_imagePort && open $URL",
+    "docker:taillogs": "echo Web Server Logs: && cross-conf-env docker logs -f $npm_package_config_imageName",
     "docker:debugmessage": "echo Docker Debug Completed Successfully! Hit Ctrl+C to terminate log tailing.",
-    "predocker:debug": "run-s docker:build docker:run",
-    "docker:debug": "run-s -cs docker:open:win docker:open:mac docker:debugmessage docker:taillogs",
+    "docker:debug": "run-s -cs docker:build docker:run docker:open docker:debugmessage docker:taillogs",
     "aws:login:win": "cross-conf-env aws ecr get-login --no-include-email --region $npm_package_config_awsRegion > dockerLogin.cmd && call dockerLogin.cmd && del dockerLogin.cmd",
     "aws:login:mac": "eval $(aws ecr get-login --no-include-email --region $npm_package_config_awsRegion)",
     "aws:login": "run-p -cs aws:login:win aws:login:mac",
@@ -59,7 +55,9 @@
     "init:env": "init-dev-env generate-dot-env example.env -f",
     "lint:ts": "tslint --config tslint.json --project . -e \"**/{test,polyfills}.ts\"",
     "lint:ts:fix": "tslint --config tslint.json --fix --project . -e \"**/{test,polyfills}.ts\"",
-    "lint:tsc": "tsc --noEmit --skipLibCheck"
+    "lint:tsc": "tsc --noEmit --skipLibCheck",
+    "docker:stop": "cross-conf-env docker stop $npm_package_config_imageName || true",
+    "docker:open": "sleep 2 && cross-conf-env open-cli http://localhost:$npm_package_config_imagePort"
   },
   "private": true,
   "dependencies": {
@@ -124,6 +122,7 @@
     "karma-jasmine": "^3.1.1",
     "karma-jasmine-html-reporter": "^1.5.3",
     "npm-run-all": "^4.1.5",
+    "open-cli": "^6.0.1",
     "prettier": "^2.0.4",
     "protractor": "^5.4.3",
     "rimraf": "^3.0.2",
